--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>MinecadeModInstaller</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
     <properties>
         <minecraft.version>1.7.2</minecraft.version>
         <stage>beta</stage>
@@ -60,7 +61,15 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <finalName>MinecadeModInstaller-${minecraft.version}.jar</finalName>
+                    <finalName>MinecadeModInstaller-${minecraft.version}</finalName>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <finalName>BaseInstaller-${minecraft.version}</finalName>
                 </configuration>
             </plugin>
         </plugins>
