--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
             <resource>
                 <directory>${basedir}/src/main/resources</directory>
                 <filtering>false</filtering>
+                <includes>*</includes>
             </resource>
         </resources>
         <plugins>
