--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <version>1.1.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.8.1</version>
+        </dependency>
     </dependencies>
 
     <build>
