--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.minecade.mods</groupId>
-    <artifactId>MinecadeModInstaller</artifactId>
+    <artifactId>OlimpoModInstaller</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
@@ -66,7 +66,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <finalName>MinecadeModInstaller-${minecraft.version}</finalName>
+                    <finalName>OlimpoModInstaller-${minecraft.version}</finalName>
                 </configuration>
             </plugin>
             <plugin>
